web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-func-gen/output.txt
[SyntaxError]: Identifier has already been declared. (1,19)
1|{ function f() {} function* f() {} }
 |                 ^
